# AED_project1

./: CMakeLists.txt  DataManip.cpp  DataManip.h  README.md  main.cpp
Classes/: Class.cpp  Class.h  Consulting.cpp  Consulting.h  DataManip.cpp  DataManip.h  Lesson.cpp  Lesson.h  Menu.cpp  Menu.h  Request.cpp  Request.h  Schedule.h  Student.cpp  Student.h  Students.cpp  Students.h  Test.cpp  Test.h  UC.cpp  UC.h  UC_Class.cpp  UC_Class.h  main.cpp
schedule/: test.txt
